# accordo-agent-gsoc-2026

./: .env.example  .gitignore  LICENSE  README.md  accordo.py  api.py  package.json  pyproject.toml
docs/: agent_personas.md  concerto_error_modes.md
examples/: 01_simple_loan.md  invalid_model_syntax.cto  invalid_model_type.cto  valid_model.cto
frontend/: app.js  index.html  styles.css
scripts/: demo_workflow.py  test_models.py  verify_tools.py
src/: __init__.py  llm_client.py  models.py  workflow.py
src/agents/: __init__.py  model_agent.py  requirements_agent.py
src/cli/: __init__.py  main.py
src/prompts/: __init__.py  templates.py
src/tools/: __init__.py  concerto_tools.py
tests/: __init__.py  test_concerto_tools.py  test_placeholder.py
